--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
   "files": [
     "dist"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint:fix",
+      "git-add"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chatatechnologies/chata-ai.git"
@@ -33,6 +44,8 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "husky": "^2.3.0",
+    "lint-staged": "^8.1.7",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1"
   }
