--- a/package.json
+++ b/package.json
@@ -39,11 +39,15 @@
   "dependencies": {},
   "peerDependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^2.3.0",
     "lint-staged": "^8.1.7",
@@ -51,6 +55,8 @@
     "prettier-eslint-cli": "^4.7.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.12.4",
-    "rollup-plugin-node-resolve": "^5.0.0"
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-node-resolve": "^5.0.0",
+    "rollup-plugin-terser": "^5.0.0"
   }
 }
