--- a/.babelrc
+++ b/.babelrc
@@ -13,5 +13,11 @@
       }
     ],
     "@babel/react"
-  ]
+  ],
+  // required for transpilation to work with jest
+  "env": {
+    "test": {
+      "presets": ["@babel/env", "@babel/react"]
+    }
+  }
 }
