--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "url": "https://github.com/chatatechnologies/chata-ai/issues"
   },
   "homepage": "https://chatatechnologies.github.io/chata-ai/",
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.6.2",
+    "rc-drawer": "^1.9.8"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
@@ -57,7 +60,9 @@
     "@storybook/react": "^5.0.11",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.0.5",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.3",
@@ -72,19 +77,22 @@
     "lint-staged": "^8.1.7",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.3",
     "rollup": "^1.12.4",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-less": "^1.1.2",
+    "rollup-plugin-less-loader": "^0.2.1",
     "rollup-plugin-node-resolve": "^5.0.0",
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-terser": "^5.0.0",
+    "rollup-plugin-typescript2": "^0.21.1",
     "watch": "^1.0.2"
   },
   "peerDependencies": {
-    "react": ">=16.2"
+    "react": ">=16.2",
+    "react-dom": "^16.8.6"
   },
   "engines": {
     "node": ">=8"
