--- a/.babelrc
+++ b/.babelrc
@@ -1,24 +1,25 @@
 {
   "presets": [
     [
-      "@babel/env",
+      "env",
       {
         // use rollup to transpile, not babel
         "modules": false,
         "targets": {
           // https://browserl.ist/?q=%3E+0.25%25%2C+ie+11%2C+not+op_mini+all%2C+not+dead
-          "browsers": "> 0.25%, ie 11, not op_mini all, not dead",
+          "browsers": "> 0.25%, ie 11, not op_mini all",
           "node": 8
         }
       }
     ],
-    "@babel/react"
+    "react"
   ],
-  "plugins": ["@babel/plugin-proposal-class-properties"],
+  "plugins": ["babel-plugin-transform-class-properties"],
   // required for transpilation to work with jest
   "env": {
     "test": {
-      "presets": ["@babel/env", "@babel/react"]
+      "presets": ["env", "react"],
+      "plugins": ["babel-plugin-transform-class-properties"]
     }
   }
 }
