--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "babel-cli": "https://registry.npmjs.org/babel-cli/-/babel-cli-6.26.0.tgz",
     "babel-core": "https://registry.npmjs.org/babel-core/-/babel-core-6.26.0.tgz",
     "babel-jest": "^23.6.0",
-    "babel-loader": "https://registry.npmjs.org/babel-loader/-/babel-loader-7.1.2.tgz",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "https://registry.npmjs.org/babel-preset-env/-/babel-preset-env-1.6.1.tgz",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
