--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chata-ai",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Javascript widget library",
   "main": "dist/bundle.cjs.js",
   "module": "dist/bundle.esm.js",
@@ -49,9 +49,16 @@
   },
   "homepage": "https://chatatechnologies.github.io/chata-ai/",
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-plugin-external-helpers": "^6.22.0",
+    "papaparse": "^5.0.0",
     "prop-types": "^15.6.2",
-    "rc-drawer": "^1.9.8"
+    "rc-drawer": "^1.9.8",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-scroll-to-bottom": "^1.3.1",
+    "react-speech-recognition": "^2.0.1",
+    "react-tabulator": "^0.9.1",
+    "uuid": "https://registry.npmjs.org/uuid/-/uuid-2.0.3.tgz"
   },
   "devDependencies": {
     "@storybook/addon-options": "^5.0.11",
@@ -59,10 +66,13 @@
     "babel-cli": "https://registry.npmjs.org/babel-cli/-/babel-cli-6.26.0.tgz",
     "babel-core": "https://registry.npmjs.org/babel-core/-/babel-core-6.26.0.tgz",
     "babel-jest": "^23.6.0",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "https://registry.npmjs.org/babel-preset-env/-/babel-preset-env-1.6.1.tgz",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
+    "check-prop-types": "^1.1.2",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint": "^5.16.0",
@@ -97,10 +107,12 @@
     "watch": "^1.0.2"
   },
   "peerDependencies": {
-    "react": ">=16.2",
-    "react-dom": "^16.8.6"
+    "react": ">=16.2"
   },
   "engines": {
     "node": ">=8"
+  },
+  "resolutions": {
+    "**/**/fsevents": "^1.2.9"
   }
 }
