--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "papaparse": "^5.0.0",
     "prop-types": "^15.6.2",
     "rc-drawer": "^1.9.8",
+    "react-autosuggest": "^9.4.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-scroll-to-bottom": "^1.3.1",
     "react-speech-recognition": "^2.0.1",
