postCSS and Autoprefixer for bundle

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "devDependencies": {
     "@storybook/addon-options": "^5.0.11",
     "@storybook/react": "^5.0.11",
+    "autoprefixer": "^9.6.0",
     "babel-cli": "https://registry.npmjs.org/babel-cli/-/babel-cli-6.26.0.tgz",
     "babel-core": "https://registry.npmjs.org/babel-core/-/babel-core-6.26.0.tgz",
     "babel-jest": "^23.6.0",
@@ -96,12 +97,8 @@
     "rollup": "^1.12.4",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-css-only": "^1.0.0",
-    "rollup-plugin-less": "^1.1.2",
-    "rollup-plugin-less-loader": "^0.2.1",
     "rollup-plugin-node-resolve": "^5.0.0",
-    "rollup-plugin-scss": "^1.0.1",
-    "rollup-plugin-string": "^3.0.0",
+    "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-svg": "^1.0.1",
     "rollup-plugin-terser": "^5.0.0",
     "rollup-plugin-typescript2": "^0.21.1",
