--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "rc-drawer": "^1.9.8",
     "react-autosuggest": "^9.4.3",
     "react-custom-scrollbars": "^4.2.1",
+    "react-icons": "^3.7.0",
     "react-scroll-to-bottom": "^1.3.1",
     "react-speech-recognition": "^2.0.1",
     "react-tabulator": "^0.9.1",
+    "react-tooltip": "^3.10.0",
     "uuid": "https://registry.npmjs.org/uuid/-/uuid-2.0.3.tgz"
   },
   "devDependencies": {
