--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "chata-ai": "file:../..",
+    "@chata-ai/core": "file:../..",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
