--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@chata-ai/core": "file:../..",
+    "eslint": "^6.0.1",
+    "eslint-plugin-jest": "^22.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
