--- a/package.json
+++ b/package.json
@@ -50,6 +50,15 @@
   "homepage": "https://chatatechnologies.github.io/chata-ai/",
   "dependencies": {
     "axios": "^0.19.0",
+    "d3": "^5.9.2",
+    "d3-array": "^2.2.0",
+    "d3-axis": "^1.0.12",
+    "d3-scale": "^3.0.0",
+    "d3-selection": "^1.4.0",
+    "d3-tip": "^0.9.1",
+    "d3-transition": "^1.2.0",
+    "dayjs": "^1.8.14",
+    "numbro": "^2.1.2",
     "papaparse": "^5.0.0",
     "prop-types": "^15.6.2",
     "rc-drawer": "^1.9.8",
