start making visualizations - column chart (WIP) separate safetynet into its own component

--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -9,7 +9,7 @@
     "dev": "npx nodemon --watch '../../src' --delay 10  --exec 'node index.js'"
   },
   "dependencies": {
-    "chata-ai": "file:../..",
+    "@chata-ai/core": "file:../..",
     "express": "latest",
     "react": "latest",
     "react-dom": "latest"
