--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "d3-axis": "^1.0.12",
     "d3-scale": "^3.0.0",
     "d3-selection": "^1.4.0",
-    "d3-tip": "^0.9.1",
     "d3-transition": "^1.2.0",
     "dayjs": "^1.8.14",
     "numbro": "^2.1.2",
@@ -108,6 +107,7 @@
     "rollup": "^1.12.4",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-css-only": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.0.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-svg": "^1.0.1",
