--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     "d3": "^5.9.2",
     "d3-array": "^2.2.0",
     "d3-axis": "^1.0.12",
+    "d3-collection": "^1.0.7",
+    "d3-interpolate": "^1.3.2",
     "d3-scale": "^3.0.0",
     "d3-selection": "^1.4.0",
+    "d3-shape": "^1.3.5",
     "d3-transition": "^1.2.0",
     "dayjs": "^1.8.14",
     "numbro": "^2.1.2",
