cancel autocomplete call when new key is pressed

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "url": "https://github.com/chatatechnologies/chata-ai.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Nicole Moore",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/chatatechnologies/chata-ai/issues"
