--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@chata-ai/core": "file:../..",
+    "antd": "^3.22.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
