add stacked bar and stacked column charts add error catch HOC to chart component

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chata-ai/core",
-  "version": "0.0.34",
+  "version": "0.0.35",
   "description": "Javascript widget library",
   "main": "dist/bundle.cjs.js",
   "module": "dist/bundle.esm.js",
@@ -55,9 +55,11 @@
     "d3-axis": "^1.0.12",
     "d3-collection": "^1.0.7",
     "d3-interpolate": "^1.3.2",
+    "d3-legend": "^1.0.0",
     "d3-scale": "^3.0.0",
     "d3-selection": "^1.4.0",
     "d3-shape": "^1.3.5",
+    "d3-svg-legend": "^2.25.6",
     "d3-transition": "^1.2.0",
     "dayjs": "^1.8.14",
     "numbro": "^2.1.2",
