--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chata-ai/core": "file:../..",
     "antd": "^3.22.2",
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
