--- a/package.json
+++ b/package.json
@@ -50,35 +50,38 @@
   "homepage": "https://chatatechnologies.github.io/chata-ai/",
   "dependencies": {
     "axios": "^0.19.0",
-    "d3": "^5.9.2",
-    "d3-array": "^2.2.0",
+    "d3": "^5.12.0",
+    "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
     "d3-collection": "^1.0.7",
     "d3-interpolate": "^1.3.2",
-    "d3-scale": "^3.0.0",
+    "d3-scale": "^3.2.0",
     "d3-selection": "^1.4.0",
     "d3-shape": "^1.3.5",
     "d3-svg-legend": "^2.25.6",
     "d3-transition": "^1.2.0",
     "dayjs": "^1.8.16",
+    "disable-scroll": "^0.5.0",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
     "numbro": "^2.1.2",
     "prop-types": "^15.6.2",
-    "rc-drawer": "^1.9.8",
+    "rc-drawer": "^1.10.1",
     "react-autosuggest": "^9.4.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-grid-layout": "^0.16.6",
-    "react-icons": "^3.7.0",
-    "react-speech-recognition": "^2.0.1",
-    "react-tabulator": "^0.9.1",
+    "react-icons": "^3.8.0",
+    "react-speech-recognition": "^2.0.4",
+    "react-tabulator": "^0.9.6",
     "react-tiny-popover": "^3.4.5",
-    "react-tooltip": "^3.10.0",
+    "react-tooltip": "^3.11.1",
     "uuid": "https://registry.npmjs.org/uuid/-/uuid-2.0.3.tgz"
   },
   "devDependencies": {
-    "@storybook/addon-options": "^5.0.11",
-    "@storybook/react": "^5.0.11",
-    "autoprefixer": "^9.6.0",
+    "@storybook/addon-options": "^5.2.5",
+    "@storybook/react": "^5.2.5",
+    "autoprefixer": "^9.7.0",
     "babel-cli": "https://registry.npmjs.org/babel-cli/-/babel-cli-6.26.0.tgz",
     "babel-core": "https://registry.npmjs.org/babel-core/-/babel-core-6.26.0.tgz",
     "babel-jest": "^23.6.0",
@@ -91,32 +94,32 @@
     "babel-preset-react": "^6.24.1",
     "check-prop-types": "^1.1.2",
     "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^22.6.4",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "gh-pages": "^2.0.1",
-    "husky": "^2.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.20.0",
+    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "gh-pages": "^2.1.1",
+    "husky": "^2.7.0",
     "jest": "^23.6.0",
     "jest-css-modules": "^2.0.0",
-    "lint-staged": "^8.1.7",
+    "lint-staged": "^8.2.1",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
-    "react-test-renderer": "^16.8.6",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.12.4",
+    "react-test-renderer": "^16.11.0",
+    "rimraf": "^2.7.1",
+    "rollup": "^1.25.2",
     "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-only": "^1.0.0",
-    "rollup-plugin-node-resolve": "^5.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-svg": "^1.0.1",
-    "rollup-plugin-terser": "^5.0.0",
+    "rollup-plugin-terser": "^5.1.2",
     "watch": "^1.0.2"
   },
   "peerDependencies": {
