--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@chata-ai/core",
   "version": "0.1.11",
   "description": "Javascript widget library",
-  "main": "dist/bundle.cjs.js",
-  "module": "dist/bundle.esm.js",
+  "main": "dist/chata.cjs.js",
+  "module": "dist/chata.esm.js",
   "sideEffects": false,
   "files": [
     "dist"
