--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-grid-layout": "^0.16.6",
     "react-icons": "^3.8.0",
+    "react-paginate": "^6.3.2",
     "react-speech-recognition": "^2.0.4",
     "react-tabulator": "^0.9.6",
     "react-tiny-popover": "^3.4.5",
