fix multiple scroll and style bugs add favicon and new title to app metadata

--- a/examples/cra/public/manifest.json
+++ b/examples/cra/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "AutoQL",
+  "name": "AutoQL Test Page",
   "icons": [
     {
       "src": "favicon.ico",
