--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "prettier.options": { "configFile": "../.prettierrc" },
+  "eslint.options": { "configFile": "../.eslintrc.json" },
+  "eslint.workingDirectories": ["./examples", "./src"]
 }
