ci: add semantic release job to config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,17 @@ jobs:
             - run: npm i
             - run: npm i react react-dom
             - run: npm run test
+  test-and-release:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm install
+            - run: npm i react react-dom
+            - run: npm run test
+            - run: npx semantic-release
 workflows:
   build-and-test:
     jobs:
