test commit on feature branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ workflows:
       - build-and-test:
           filters:
             branches:
+              # ignore: master
               only: develop
   test-and-release:
     jobs:
