ci: use build-and-test for all branches except master (which uses test-and-release)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ workflows:
       - build-and-test:
           filters:
             branches:
-              only: develop
+              ignore: master
   test-and-release:
     jobs:
       - test-and-release:
