--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
   },
   "homepage": "https://github.com/chatatechnologies/react-autoql/",
   "dependencies": {
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/npm": "^7.0.5",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "axios": "^0.19.0",
     "d3": "^5.12.0",
     "d3-array": "^2.3.3",
