--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dist"
   ],
   "scripts": {
+    "start": "npm run build && cd examples/cra && npm install && npm start",
     "dev": "env NODE_ENV=dev watch 'npm run build' src",
     "test": "jest",
     "test:watch": "jest --watch",
