--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
-    "build": "react-scripts build",
+    "build": "SKIP_PREFLIGHT_CHECK=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -22,8 +22,5 @@
     "not dead",
     "not ie < 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "babel-jest": "^24.9.0"
-  }
+  ]
 }
