--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "react-dom": "^16.13.1"
   },
   "engines": {
-    "node": ">=8"
+    "node": "10.15.1"
   },
   "resolutions": {
     "**/**/fsevents": "^1.2.9"
