--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@chata-ai/core",
   "version": "0.0.0-semantically-released",
   "description": "React Widget Library",
+  "homepage": "./example",
   "main": "dist/autoql.cjs.js",
   "module": "dist/autoql.esm.js",
   "sideEffects": false,
@@ -44,7 +45,6 @@
   "bugs": {
     "url": "https://github.com/chatatechnologies/react-autoql/issues"
   },
-  "homepage": "https://github.com/chatatechnologies/react-autoql/",
   "dependencies": {
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/npm": "^7.0.5",
