--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   ],
   "scripts": {
     "start": "cd example && npm start",
-    "postinstall": "cd example && npm install",
-    "dev": "env NODE_ENV=dev watch 'npm run build' src",
+    "dev": "env NODE_ENV=dev watch 'npm pack' src",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -27,7 +26,7 @@
   "style": "dist/autoql.esm.css",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && npm pack"
     }
   },
   "lint-staged": {
