--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chata-ai/core": "file:../chata-ai-core-0.0.0-semantically-released.tgz",
+    "@chata-ai/core": "^1.11.2",
     "antd": "^4.0.1",
     "axios": "^0.19.0",
     "react": "^16.8.6",
