--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "style": "dist/autoql.esm.css",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run packexample && git add example/chata-ai-core-0.0.0-semantically-released.tgz && cd example && npx penv base"
+      "pre-commit": "lint-staged && npm run packexample && git add example/chata-ai-core-0.0.0-semantically-released.tgz"
     }
   },
   "lint-staged": {
