--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dist"
   ],
   "scripts": {
-    "dev": "watch 'npm run build' src",
+    "start": "cd example && npm start",
+    "dev": "env NODE_ENV=dev watch 'npm run build' src",
+    "packexample": "cd example && npm pack ..",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -22,10 +24,10 @@
     "semantic-release": "semantic-release",
     "cz": "git-cz"
   },
-  "style": "dist/styles.css",
+  "style": "dist/autoql.esm.css",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && npm run packexample && git add example/chata-ai-core-0.0.0-semantically-released.tgz"
     }
   },
   "lint-staged": {
@@ -43,7 +45,6 @@
   "bugs": {
     "url": "https://github.com/chatatechnologies/react-autoql/issues"
   },
-  "homepage": "https://github.com/chatatechnologies/react-autoql/",
   "dependencies": {
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/npm": "^7.0.5",
@@ -139,7 +140,7 @@
     "react-dom": "^16.13.1"
   },
   "engines": {
-    "node": ">=8"
+    "node": "10.15.1"
   },
   "resolutions": {
     "**/**/fsevents": "^1.2.9"
@@ -148,5 +149,6 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "cacheDirectories": []
 }
