build(npm): change all package names to react-autoql

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chata-ai/core",
+  "name": "react-autoql",
   "version": "0.0.0-semantically-released",
   "description": "React Widget Library",
   "main": "dist/autoql.cjs.js",
