--- a/example/package.json
+++ b/example/package.json
@@ -27,7 +27,7 @@
     "not op_mini all"
   ],
   "engines": {
-    "node": "10.15.1"
+    "node": ">=10.18"
   },
   "cacheDirectories": [],
   "env": {
