--- a/package.json
+++ b/package.json
@@ -137,11 +137,11 @@
     "react": ">=16.2",
     "react-dom": "^16.13.1"
   },
-  "engines": {
-    "node": "10.15.1"
-  },
   "resolutions": {
     "**/**/fsevents": "^1.2.9"
+  },
+  "engines": {
+    "node": ">=10.18"
   },
   "config": {
     "commitizen": {
