--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "packexample": "cd example && npm pack ..",
     "test": "NODE_ENV=test && jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "npm test -- --coverage",
+    "test:badges": "npm run test:coverage  && make-coverage-badge",
     "test:staged": "jest --findRelatedTests",
     "build": "NODE_ENV=dev rollup -c",
     "lint": "eslint '**/*.js'",
@@ -25,7 +26,7 @@
   "style": "dist/autoql.esm.css",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run packexample && git add example/react-autoql-0.0.0-semantically-released.tgz"
+      "pre-commit": "npm run test:badges && git add coverage && npm run packexample && git add example/react-autoql-0.0.0-semantically-released.tgz"
     }
   },
   "lint-staged": {
@@ -61,6 +62,7 @@
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "lodash.reduce": "^4.6.0",
+    "make-coverage-badge": "^1.2.0",
     "numbro": "^2.2.0",
     "prop-types": "^15.6.2",
     "rc-drawer": "^4.1.0",
