--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-autoql": "file:react-autoql-0.0.0-semantically-released.tgz",
+    "react-autoql": "file:../",
     "antd": "^4.0.1",
     "axios": "^0.19.0",
     "penv": "^0.2.0",
@@ -29,5 +29,8 @@
   "engines": {
     "node": "10.15.1"
   },
-  "cacheDirectories": []
+  "cacheDirectories": [],
+  "env": {
+    "NODE_ENV": "dev"
+  }
 }
