--- a/package.json
+++ b/package.json
@@ -81,13 +81,14 @@
     "uuid": "https://registry.npmjs.org/uuid/-/uuid-2.0.3.tgz"
   },
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/npm": "^7.0.5",
-    "@semantic-release/release-notes-generator": "^9.0.1",
     "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.7",
+    "@semantic-release/npm": "^7.0.5",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "autoprefixer": "^9.7.0",
+    "axios-mock-adapter": "^1.18.1",
     "babel-cli": "https://registry.npmjs.org/babel-cli/-/babel-cli-6.26.0.tgz",
     "babel-core": "https://registry.npmjs.org/babel-core/-/babel-core-6.26.0.tgz",
     "babel-jest": "^23.6.0",
@@ -114,6 +115,8 @@
     "husky": "^2.7.0",
     "jest": "^23.6.0",
     "jest-css-modules": "^2.0.0",
+    "jest-mock-axios": "^4.2.0",
+    "jsdom": "^16.2.2",
     "lint-staged": "^8.2.1",
     "node-sass": "^4.13.0",
     "postcss-prefixer": "^2.1.2",
