--- a/package.json
+++ b/package.json
@@ -79,12 +79,13 @@
     "uuid": "https://registry.npmjs.org/uuid/-/uuid-2.0.3.tgz"
   },
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/npm": "^7.0.5",
-    "@semantic-release/release-notes-generator": "^9.0.1",
+    "@rollup/plugin-image": "^2.0.5",
     "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.7",
+    "@semantic-release/npm": "^7.0.5",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "autoprefixer": "^9.7.0",
     "babel-cli": "https://registry.npmjs.org/babel-cli/-/babel-cli-6.26.0.tgz",
     "babel-core": "https://registry.npmjs.org/babel-core/-/babel-core-6.26.0.tgz",
