--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "packexample": "cd example && npm pack ..",
     "test": "NODE_ENV=test && jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "npm test -- --coverage",
+    "test:badges": "npm run test:coverage  && npx make-coverage-badge --output-path ./public/badge.svg",
     "test:staged": "jest --findRelatedTests",
     "build": "NODE_ENV=dev rollup -c",
     "lint": "eslint '**/*.js'",
     "lint:fix": "prettier-eslint '**/*.js' --write",
     "prepublish": "npx rimraf dist && npm run build",
     "semantic-release": "semantic-release",
-    "cz": "git-cz"
+    "cz": "npx git-cz"
   },
   "style": "dist/autoql.esm.css",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run packexample && git add example/react-autoql-0.0.0-semantically-released.tgz"
+      "pre-commit": "npx jest --clearCache && npm run test:badges && git add public/badge.svg && npm run packexample && git add example/react-autoql-0.0.0-semantically-released.tgz"
     }
   },
   "lint-staged": {
@@ -61,6 +62,7 @@
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "lodash.reduce": "^4.6.0",
+    "make-coverage-badge": "^1.2.0",
     "numbro": "^2.2.0",
     "prop-types": "^15.6.2",
     "rc-drawer": "^1.10.1",
@@ -79,13 +81,14 @@
     "uuid": "https://registry.npmjs.org/uuid/-/uuid-2.0.3.tgz"
   },
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/npm": "^7.0.5",
-    "@semantic-release/release-notes-generator": "^9.0.1",
     "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.7",
+    "@semantic-release/npm": "^7.0.5",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "autoprefixer": "^9.7.0",
+    "axios-mock-adapter": "^1.18.1",
     "babel-cli": "https://registry.npmjs.org/babel-cli/-/babel-cli-6.26.0.tgz",
     "babel-core": "https://registry.npmjs.org/babel-core/-/babel-core-6.26.0.tgz",
     "babel-jest": "^23.6.0",
@@ -112,6 +115,8 @@
     "husky": "^2.7.0",
     "jest": "^23.6.0",
     "jest-css-modules": "^2.0.0",
+    "jest-mock-axios": "^4.2.0",
+    "jsdom": "^16.2.2",
     "lint-staged": "^8.2.1",
     "node-sass": "^4.13.0",
     "postcss-prefixer": "^2.1.2",
