--- a/example/package.json
+++ b/example/package.json
@@ -28,7 +28,7 @@
     "not op_mini all"
   ],
   "engines": {
-    "node": "10.15.1"
+    "node": ">=10.15.1"
   },
   "cacheDirectories": [],
   "env": {
