--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "dev": "watch 'npm run build' src",
-    "packexample": "cd example && npm pack ..",
+    "packexample": "cd example/package && npm pack ../..",
     "test": "NODE_ENV=test && jest",
     "test:watch": "jest --watch",
     "test:coverage": "npm test -- --coverage",
@@ -142,11 +142,11 @@
     "react": ">=16.2",
     "react-dom": "^16.13.1"
   },
-  "engines": {
-    "node": "10.15.1"
-  },
   "resolutions": {
     "**/**/fsevents": "^1.2.9"
+  },
+  "engines": {
+    "node": ">=10.18"
   },
   "config": {
     "commitizen": {
