--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-grid-layout": "^0.16.6",
     "react-icons": "^3.8.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-modal": "^3.11.2",
     "react-paginate": "^6.3.2",
     "react-speech-recognition": "^2.0.7",
     "react-splitter-layout": "^4.0.0",
