--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "style": "dist/autoql.esm.css",
   "husky": {
     "hooks": {
-      "pre-commit": "npx jest --clearCache && npm run test:badges && git add public/badge.svg && npm run packexample && git add example/react-autoql-0.0.0-semantically-released.tgz"
+      "pre-commit": "npx jest --clearCache && npm run test:badges && git add public/badge.svg && npm run packexample && git add example/package/react-autoql-0.0.0-semantically-released.tgz"
     }
   },
   "lint-staged": {
@@ -71,6 +71,7 @@
     "react-grid-layout": "^0.16.6",
     "react-icons": "^3.8.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-modal": "^3.11.2",
     "react-paginate": "^6.3.2",
     "react-speech-recognition": "^2.0.7",
     "react-splitter-layout": "^4.0.0",
