--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "disable-scroll": "^0.5.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
+    "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
     "lodash.reduce": "^4.6.0",
     "make-coverage-badge": "^1.2.0",
