--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "penv": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-ratings-declarative": "^3.4.1",
     "react-scripts": "^3.4.1",
     "react-sortable": "^2.0.0"
   },
