--- a/example/package.json
+++ b/example/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-autoql": "file:../",
+    "react-autoql": "file:react-autoql-0.0.0-semantically-released.tgz",
     "antd": "^4.0.1",
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
     "penv": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-ratings-declarative": "^3.4.1",
     "react-scripts": "^3.4.1",
     "react-sortable": "^2.0.0"
   },
@@ -30,8 +31,5 @@
   "engines": {
     "node": ">=10.15.1"
   },
-  "cacheDirectories": [],
-  "env": {
-    "NODE_ENV": "dev"
-  }
+  "cacheDirectories": []
 }
