--- a/example/package.json
+++ b/example/package.json
@@ -10,9 +10,9 @@
     "penv": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-ratings-declarative": "^3.4.1",
     "react-scripts": "^3.4.1",
-    "react-sortable": "^2.0.0"
+    "react-sortable": "^2.0.0",
+    "react-ratings-declarative": "^3.4.1"
   },
   "scripts": {
     "preinstall": "npx penv $NODE_ENV",
