--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-tabulator": "^0.13.2",
     "react-tiny-popover": "^3.4.5",
     "react-tooltip": "^3.11.1",
+    "sql-formatter": "^2.3.3",
     "tabulator-tables": "4.7.2",
     "throttle-debounce": "^2.1.0",
     "uuid": "https://registry.npmjs.org/uuid/-/uuid-2.0.3.tgz"
