Add "Send to MS Teams" and "Send to Slack" options in Data Messenger

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "uuid": "https://registry.npmjs.org/uuid/-/uuid-2.0.3.tgz"
   },
   "devDependencies": {
+    "@rollup/plugin-image": "^2.0.5",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
