--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "d3-transition": "^1.2.0",
     "dayjs": "^1.8.36",
     "disable-scroll": "^0.5.0",
+    "linear16": "^1.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
@@ -82,6 +83,7 @@
     "react-tiny-popover": "^3.4.5",
     "react-tooltip": "^3.11.1",
     "recorder-js": "^1.0.7",
+    "recorderjs": "^1.0.1",
     "sql-formatter": "^2.3.3",
     "tabulator-tables": "4.7.2",
     "throttle-debounce": "^2.1.0",
