--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-tooltip": "^3.11.1",
     "recorder-js": "^1.0.7",
     "recorderjs": "^1.0.1",
+    "recordrtc": "^5.6.1",
     "sql-formatter": "^2.3.3",
     "tabulator-tables": "4.7.2",
     "throttle-debounce": "^2.1.0",
