--- a/example/package.json
+++ b/example/package.json
@@ -29,7 +29,8 @@
     "not op_mini all"
   ],
   "engines": {
-    "node": ">=10.15.1"
-  },
+    "node": ">=10.15.1",
+    "npm": "6.14.8"
+   },
   "cacheDirectories": []
 }
