--- a/package.json
+++ b/package.json
@@ -147,8 +147,8 @@
     "watch": "^1.0.2"
   },
   "peerDependencies": {
-    "react": ">=16.4",
-    "react-dom": "^16.13.1"
+    "react": ">=16.2",
+    "react-dom": ">=16.13.1"
   },
   "resolutions": {
     "**/**/fsevents": "^1.2.9"
