--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,12 @@ jobs:
   build-and-test:
     executor:
       name: node/default
-    resource_class: xlarge
+    resource_class: large
     steps:
       - checkout
       - node/with-cache:
           steps:
+            - run: npm rebuild node-sass
             - run: npm i
             - run: npm i react react-dom
             - run:
