--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,12 @@ jobs:
   build-and-test:
     executor:
       name: node/default
-    resource_class: large
+      tag: '14.5.0'
+    resource_class: medium
     steps:
       - checkout
       - node/with-cache:
           steps:
-            - run: npm rebuild node-sass
             - run: npm i
             - run: npm i react react-dom
             - run:
@@ -20,6 +20,7 @@ jobs:
   test-and-release:
     executor:
       name: node/default
+      tag: '14.5.0'
     resource_class: xlarge
     steps:
       - checkout
