--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.1.1",
     "husky": "^2.7.0",
-    "jest": "^23.6.0",
+    "jest": "^22.4.4",
     "jest-css-modules": "^2.0.0",
     "jest-mock-axios": "^4.2.0",
     "jsdom": "^16.2.2",
@@ -160,5 +160,8 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "cacheDirectories": []
+  "cacheDirectories": [],
+  "jtest": {
+    "testEnvironment": "node"
+  }
 }
