update the setting for jtest

--- a/package.json
+++ b/package.json
@@ -160,8 +160,5 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "cacheDirectories": [],
-  "jtest": {
-    "testEnvironment": "node"
-  }
+  "cacheDirectories": []
 }
