--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,8 @@ jobs:
   build-and-test:
     executor:
       name: node/default
-    resource_class: large
+      tag: '14.5.0'
+    resource_class: medium
     steps:
       - checkout
       - node/with-cache:
@@ -16,10 +17,11 @@ jobs:
             - run:
                 name: Run Tests
                 no_output_timeout: 60m
-                command: npm run test
+                command: npm run test -- --maxWorkers=4
   test-and-release:
     executor:
       name: node/default
+      tag: '14.5.0'
     resource_class: xlarge
     steps:
       - checkout
@@ -30,7 +32,7 @@ jobs:
             - run:
                 name: Run Tests
                 no_output_timeout: 60m
-                command: npm run test
+                command: npm run test -- --maxWorkers=4
             - run: npx semantic-release
 workflows:
   build-and-test:
