--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "lodash.isequal": "^4.5.0",
     "lodash.reduce": "^4.6.0",
     "make-coverage-badge": "^1.2.0",
+    "moment-timezone": "^0.5.32",
     "numbro": "^2.2.0",
     "prop-types": "^15.6.2",
     "rc-drawer": "^1.10.1",
@@ -76,6 +77,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-modal": "^3.11.2",
     "react-paginate": "^6.3.2",
+    "react-select": "^3.1.1",
     "react-speech-recognition": "^2.0.7",
     "react-splitter-layout": "^4.0.0",
     "react-tabulator": "^0.13.2",
