fix package deps

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         // use rollup to transpile, not babel
         "modules": false,
@@ -12,21 +12,31 @@
         }
       }
     ],
-    "react"
+    "@babel/preset-react"
   ],
   "plugins": [
-    "babel-plugin-transform-class-properties",
-    "babel-plugin-syntax-object-rest-spread",
-    "babel-plugin-transform-object-rest-spread"
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-syntax-object-rest-spread",
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "absoluteRuntime": false,
+        "corejs": false,
+        "helpers": false,
+        "regenerator": true,
+        "version": "7.0.0-beta.0"
+      }
+    ]
   ],
   // required for transpilation to work with jest
   "env": {
     "test": {
       "presets": ["env", "react"],
       "plugins": [
-        "babel-plugin-transform-class-properties",
-        "babel-plugin-syntax-object-rest-spread",
-        "babel-plugin-transform-object-rest-spread"
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-syntax-object-rest-spread"
       ]
     }
   }
